--- a/jiebaserver/template/article.html
+++ b/jiebaserver/template/article.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <title>{{TITLE}}</title>
 <script type="text/javascript" src="/client/js/linked-data-proxy-lib.js"></script>
+<script type="text/javascript" src="/client/js/pos-annotation-lib.js"></script>
 </head>
 <script>
 var statecheck =function (x, highlight) {
