--- a/jiebaserver/client_css/markus-css/markus.css
+++ b/jiebaserver/client_css/markus-css/markus.css
@@ -39,22 +39,27 @@
 
 .fullName{
 	color: #d9534f;
+	text-decoration:underline;
 }
 
 .partialName{
 	color: #f0ad4e;
+	text-decoration:underline;
 }
 
 .timePeriod{
 	color: #5cb85c;
+	text-decoration:underline;
 }
 
 .placeName{
 	color: #337ab7;
+	text-decoration:underline;
 }
 
 .officialTitle{
 	color: #5bc0de;
+	text-decoration:underline;
 }
 
 .searchResult{
